# tempfile

./: Cargo.toml
src/: dir.rs  error.rs  lib.rs  spooled.rs  util.rs
src/file/: mod.rs
src/file/imp/: unix.rs
