[package]
name = "tempfile"
version = "3.1.0"
authors = [
  "Steven Allen <steven@stebalien.com>",
  "The Rust Project Developers",
  "Ashley Mannix <ashleymannix@live.com.au>",
  "Jason White <jasonaw0@gmail.com>",
]
documentation = "https://docs.rs/tempfile"
edition = "2018"
exclude = ["/.travis.yml", "/appveyor.yml"]
homepage = "http://stebalien.com/projects/tempfile-rs"
keywords = ["tempfile", "tmpfile", "filesystem"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/Stebalien/tempfile"
description = "A library for managing temporary files and directories."

[dependencies]
cfg-if = "0.1"
rand = {git="https://github.com/mesalock-linux/rand-sgx" , tag = "v0.7.3_sgx1.1.3" }

#["target.'cfg(unix)'.dependencies]
#libc = "0.2.27"

[target.'cfg(target_os = "redox")'.dependencies]
redox_syscall = "0.1"

[target.'cfg(not(target_env = "sgx"))'.dependencies]
sgx_tstd = { version = "1.0", rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git", features=["untrusted_fs"] }
sgx_libc = { version = "1.0", rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
